--- a/ui/style.css
+++ b/ui/style.css
@@ -1,11 +1,11 @@
 body {
     font-family: sans-serif;
     background-color: lightgrey;
-    margin-top: 75px;
+    margin-top: 500px;
 }
 
 .center {
-    text-align: left;
+    text-align: center;
 }
 
 .text-big {
